--- a/mybatis/src/main/resources/templates/main.html
+++ b/mybatis/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
 			$(function(){
 				let content = $('h1').text();
 				console.log(content);
-				// 주석
+				// 주석 dmdmkdkdkddk
 			});
 		</script>
 	</head>
